# coreutils-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cat/: main.rs
echo/: main.rs
head/: main.rs
tail/: main.rs
tree/: main.rs
wc/: main.rs
